# dictionary_lsp

./: .gitignore  Cargo.toml  README.md
benches/: fuzzy_benchmark.rs  tire_benchmark.rs
readme/: en.md
src/: completion.rs  config.rs  dictionary_data.rs  dictionary_lsp.rs  formatting.rs  fuzzy.rs  hover.rs  lib.rs  main.rs  signature_help.rs  tire.rs
tests/: completion.rs  test.txt
