[package]
name = "dictionary_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.19.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
stardict = "0.2.1"
toml = "0.7"
dirs = "5.0"
