[package]
name = "dictionary_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
tower-lsp = "0.19.0"
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
stardict = "0.2.1"
toml = "0.7"
lazy_static = "1.4"
async-trait = "0.1.73"
rusqlite = { version = "0.31.0", features = ["bundled"] }
futures = "0.3.29"
chrono = "0.4"
dirs = "5.0"
once_cell = "1.18.0"
dashmap = "6.1.0"
rayon = "1.10.0"
fst = "0.4.7"
lru = "0.13.0"
fxhash = "0.2.1"
tempfile = "3.3.0"
trie-rs = "0.4.2"

[dev-dependencies]
mockall = "0.11"
tempfile = "3.3"
criterion = { version = "0.4", features = ["async_tokio"] }

# [[bench]]
# name = "fuzzy_benchmark"
# harness = false
